# BenBot

./: .bumpversion.toml  .clang-format  .clang-tidy  .clangd  .editorconfig  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  CTestConfig.cmake  README.md  justfile  package.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  InstallPythonDeps.cmake  dependabot.yml
.github/scripts/: InstallPythonDeps.cmake
.github/workflows/: README.md  build_and_test.yml  bump_version.yml  ci.yml  docs.yml  nightly.yml  release_from_tag.yml  tag_and_release.yml
ben-bot/: BenBotConfig.hpp  BenBotVersion.hpp  CMakeLists.txt  CPPLINT.cfg  README.md  Version.hpp  book.json  config.yml  main.cpp
ben-bot/resources/: CMakeLists.txt  bench.epd  license_header.txt
ben-bot/src/: Bench.cpp  Data.cpp  Data.hpp  Engine.cpp  Engine.hpp  HelpPrinting.cpp  Printing.cpp  Resources.cpp  Resources.hpp  TextTable.cpp  TextTable.hpp  main.cpp
config/: .cmake-format.json  .editorconfig-checker.json  .gitlint  .relint.yml  CTestCustom.cmake  README.md  Warnings.cmake  license_header.txt  link-checker.toml  requirements.txt
docs/: CMakeLists.txt  CodeStyle.md  DoxygenLayout.xml  DoxygenSettings.cmake  README.md  uci-spec.txt
libbenbot/: CMakeLists.txt  README.md
libbenbot/include/libbenbot/data-structures/: OpeningBook.hpp  TranspositionTable.hpp
libbenbot/include/libbenbot/eval/: Evaluation.hpp  Material.hpp  PieceSquareTables.hpp  Score.hpp
libbenbot/include/libbenbot/search/: Search.hpp  Thread.hpp  TranspositionTable.hpp
libbenbot/src/: CPPLINT.cfg
libbenbot/src/data-structures/: OpeningBook.cpp
libbenbot/src/eval/: Evaluation.cpp  PawnStructure.cpp  PawnStructure.hpp  PieceSquareTables.cpp  PieceSquareTables.hpp  Positional.hpp
libbenbot/src/search/: MoveOrdering.cpp  MoveOrdering.hpp  Search.cpp  TimeManagement.hpp  UCIPrinting.cpp
libchess/: CMakeLists.txt  README.md
libchess/include/libchess/board/: Bitboard.hpp  BitboardIndex.hpp  BitboardMasks.hpp  BitboardSet.hpp  Distances.hpp  File.hpp  Fills.hpp  Flips.hpp  Masks.hpp  Pieces.hpp  Rank.hpp  Shifts.hpp  Square.hpp
libchess/include/libchess/eval/: Evaluation.hpp  Material.hpp  PieceSquareTables.hpp
libchess/include/libchess/game/: CastlingRights.hpp  Position.hpp  Result.hpp  ThreefoldChecker.hpp  TimeControl.hpp  Zobrist.hpp
libchess/include/libchess/geometry/: Bitboard.hpp  BitboardSet.hpp  Square.hpp
libchess/include/libchess/moves/: Attacks.hpp  Generation.hpp  Legal.hpp  Magics.hpp  Move.hpp  MoveGen.hpp  MoveRange.hpp  Patterns.hpp  Perft.hpp  PseudoLegal.hpp
libchess/include/libchess/notation/: Algebraic.hpp  EPD.hpp  FEN.hpp  PGN.hpp  UCI.hpp
libchess/include/libchess/pieces/: Colors.hpp  PieceTypes.hpp  UTF8.hpp
libchess/include/libchess/search/: NegaMax.hpp  Search.hpp  Thread.hpp  TranspositionTable.hpp
libchess/include/libchess/uci/: CommandParsing.hpp  DefaultOptions.hpp  EngineBase.hpp  Options.hpp
libchess/include/libchess/util/: Console.hpp  Files.hpp  Math.hpp  Strings.hpp  Threading.hpp  inplace_any.hpp
libchess/src/: BoardPrinting.cpp
libchess/src/board/: Bitboard.cpp  Distances.cpp
libchess/src/eval/: Evaluation.cpp  PieceSquareTables.cpp
libchess/src/game/: Position.cpp  Zobrist.cpp  Zobrist.hpp
libchess/src/moves/: Magics.cpp  MoveGen.cpp
libchess/src/notation/: Algebraic.cpp  EPD.cpp  FEN.cpp  FENHelpers.cpp  FENHelpers.hpp  PGN.cpp  UCI.cpp
libchess/src/search/: MoveOrdering.cpp  MoveOrdering.hpp  Search.cpp
libchess/src/uci/: CommandParsing.cpp  EngineBase.cpp  Options.cpp
libchess/src/util/: Console.cpp  Files.cpp  MemoryMappedFile_Posix.hpp  MemoryMappedFile_Windows.hpp  ProgressiveBackoff_ARM.hpp  ProgressiveBackoff_Intel.hpp  Strings.cpp  Threading.cpp
tests/: .clang-tidy  CMakeLists.txt  CTestCustom.cmake  README.md  eval_printer.cpp  fastchess.cmake  printer.cpp
tests/board/: Bitboard.cpp  BitboardMasks.cpp  Pieces.cpp  Square.cpp
tests/cli/: CMakeLists.txt  README.md  main.cpp
tests/fastchess/: CMakeLists.txt  README.md
tests/game/: Position.cpp
tests/geometry/: Bitboard.cpp  Square.cpp
tests/moves/: Move.cpp
tests/perft/: CMakeLists.txt  PerftResults.json  README.md  RunPerft.py  main.cpp  perft.py
tests/perft/data/: complex_crowded.json  kiwipete.json  rook_pawn_endgame.json  start_pos.json
tests/play-cli/: CMakeLists.txt  README.md  main.cpp
tests/position-solver/: CMakeLists.txt  README.md  RunPositionSolver.py  main.cpp  positions.json  solver.py
tests/position-solver/data/: BratkoKopec.epd  CCROneHour.epd  Kaufman.epd  LCT.epd  basic.epd  basic.json  endgames.epd  endgames.json  mates.epd  mates.json
tests/printer/: CMakeLists.txt  printer.cpp
tests/rampart/: CMakeLists.txt  README.md  RunRampart.py  main.cpp
tests/rampart/data/: castling.json  checkmates.json  famous.json  pawns.json  promotions.json  stalemates.json  standard.json  taxing.json
tests/uci/: CMakeLists.txt  main.cpp
tests/unit/: .clang-tidy  BenchmarkReporter.cpp  CMakeLists.txt  README.md
tests/unit/bench/: BenchmarkReporter.cpp  Bitboard.cpp  MoveGen.cpp
tests/unit/board/: Bitboard.cpp  BitboardMasks.cpp  Distances.cpp  Fills.cpp  Flips.cpp  Pieces.cpp  Square.cpp
tests/unit/eval/: Evaluation.cpp  PieceSquareTables.cpp
tests/unit/game/: CastlingRights.cpp  Position.cpp  ThreefoldRepetition.cpp  ZobristHashing.cpp
tests/unit/moves/: EnPassant.cpp  Generation.cpp  Legal.cpp  Magics.cpp  Move.cpp  Patterns.cpp  Perft.cpp  PseudoLegal.cpp
tests/unit/notation/: Algebraic.cpp  EPD.cpp  FEN.cpp  PGN.cpp  UCI.cpp
tests/unit/uci/: CommandParsing.cpp  Options.cpp
tests/unit/util/: Files.cpp  Math.cpp  inplace_any.cpp
